# oneclient_qt

./: CMakeLists.txt
qt_resources/: onedata-icon.icns  resources.qrc  status_icon.xcf
src/: activemountwidgetaction.cc  activemountwidgetaction.h  focusdetectingwidget.cc  focusdetectingwidget.h  guimessage.h  hash.cc  hash.h  logowidgetaction.cc  logowidgetaction.h  main.cc  oneclientmessagelistener.cc  oneclientmessagelistener.h  providersettings.cc  providersettings.h  providersettingseditor.cc  providersettingseditor.h  settingsmanager.cc  settingsmanager.h  systemtray.cc  systemtray.h
